<resources>
    <string name="app_name">BeeSafe</string><![CDATA[



    Location Permission
    Required/string>

    ]]><!-- Add Favorite Dialog -->
    <!-- ***************Start************* -->
    <string name="blank"> </string>

    <string name="addFavText">Add this place to favorites</string>
    <string name="notifications">- Notifications</string>
    <string name="save">Save</string>
    <string name="streetName">Via xx, Tirana, Albania</string>
    <string name="high">High Density</string>
    <string name="low">Low Density</string>
    <string name="safe">No</string>
    <string name="no_data"> No data present</string>
    <string name="remove">Remove</string>
    <string name="crowded">Crowded: </string>
    <string name="approximation">Approximation: </string>
    <string name="persons"> people</string>
    <string name="last_update">Last Update: </string>
    <string name="minutes_ago"> minutes ago</string>
    <string name="cancel">Cancel</string>
    <string name="success_added">Added successfully</string>
    <string name="success_removed">Removed successfully</string>
    <string name="open_map">Open Map</string>
    <string name="favorite_palce">Favorite Place</string>


    <string name="help_text">
        BeeSafe is made for the course Software Engineering AA 20/21 Ca Foscari University. It shows the crowds nearby your location and represent them using a HeatMap. It has a background service which scans the current location continuously by a tracing algorithm. The scan gets uploaded to a realtime database. A location is represented using a GeoHash for privacy purposes and efficiency. No personal data which can identify you are stored on the server.
        \n\n
        The user has the possibility to save a favorite location and get notified every time the location gets crowded. To add a favorite place, the user should long click on a location on the map. Then, a popup will be displayed where can enter a custom name for that location and enable or disable the notifications. To see information about a saved place, the users clicks on the pinpoint generated by the app, where a new dialog shows information about this place like the density, last update and an approximation made by the tracing algorithm. The user can remove a favorite place from saved.
        \n\n
        Data on the realtime database gets refreshed often to improve the approximation, and moved to a new database, which holds one-week data. These data is used byt the prevision algorithm to predict a crowd place. Predication is not yet supported, and will be as a feature, planned for newer releases.
    </string>


    <string name="privacy_text">
        Privacy Policy
        \n
        BufferOverflow built the BeeSafe app as a Free app. This SERVICE is provided by BufferOverflow at no cost and is intended for use as is.
        This page is used to inform visitors regarding our policies with the collection, use, and disclosure of Personal Information if anyone decided to use our Service.
        If you choose to use our Service, then you agree to the collection and use of information in relation to this policy. The Personal Information that we collect is used for providing and improving the Service. We will not use or share your information with anyone except as described in this Privacy Policy.
        The terms used in this Privacy Policy have the same meanings as in our Terms and Conditions, which is accessible at BeeSafe unless otherwise defined in this Privacy Policy.

        \n\n
        Information Collection and Use
        For a better experience, while using our Service, we may require you to provide us with certain personally identifiable information, including but not limited to location approximation. The information that we request will be retained by us and used as described in this privacy policy.
        The app does use third party services that may collect information used to identify you.
        Link to privacy policy of third party service providers used by the app
        Google Play Services
        Google Analytics for Firebase
        Firebase Crashlytics

        \n
        Log Data
        We want to inform you that whenever you use our Service, in a case of an error in the app we collect data and information (through third party products) on your phone called Log Data. This Log Data may include information such as your device Internet Protocol (“IP”) address, device name, operating system version, the configuration of the app when utilizing our Service, the time and date of your use of the Service, and other statistics.

        \n
        Cookies
        Cookies are files with a small amount of data that are commonly used as anonymous unique identifiers. These are sent to your browser from the websites that you visit and are stored on your devices internal memory.
        This Service does not use these “cookies” explicitly. However, the app may use third party code and libraries that use “cookies” to collect information and improve their services. You have the option to either accept or refuse these cookies and know when a cookie is being sent to your device. If you choose to refuse our cookies, you may not be able to use some portions of this Service.
        \n
        Service Providers
        We may employ third-party companies and individuals due to the following reasons:\n
        To facilitate our Service;
        To provide the Service on our behalf;
        To perform Service-related services; or
        To assist us in analyzing how our Service is used.
        We want to inform users of this Service that these third parties have access to your Personal Information. The reason is to perform the tasks assigned to them on our behalf. However, they are obligated not to disclose or use the information for any other purpose.

        \n
        Security
        We value your trust in providing us your Personal Information, thus we are striving to use commercially acceptable means of protecting it. But remember that no method of transmission over the internet, or method of electronic storage is 100% secure and reliable, and we cannot guarantee its absolute security.

        \n
        Links to Other Sites
        This Service may contain links to other sites. If you click on a third-party link, you will be directed to that site. Note that these external sites are not operated by us. Therefore, we strongly advise you to review the Privacy Policy of these websites. We have no control over and assume no responsibility for the content, privacy policies, or practices of any third-party sites or services.

        \n
        Children’s Privacy
        These Services do not address anyone under the age of 13. We do not knowingly collect personally identifiable information from children under 13. In the case we discover that a child under 13 has provided us with personal information, we immediately delete this from our servers. If you are a parent or guardian and you are aware that your child has provided us with personal information, please contact us so that we will be able to do necessary actions.

        \n
        Changes to This Privacy Policy
        We may update our Privacy Policy from time to time. Thus, you are advised to review this page periodically for any changes. We will notify you of any changes by posting the new Privacy Policy on this page.

        \n\n
        This policy is effective as of 2021-01-07

        \n\n
        Contact Us
        If you have any questions or suggestions about our Privacy Policy, do not hesitate to contact us at nestiserani@gmail.com.
    </string>
    <!-- ***************FINISH************* -->
</resources>